--- a/COURSERA CSS/advanced_selectors_1.html
+++ b/COURSERA CSS/advanced_selectors_1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	  <header>
-    <h1>Colleen van Lent</h1>
+    <h1>Colleen van Lent</h1>r
 		    <nav>
 			      <a href = "">One</a>
 			      <a href = "">Two</a>
