--- a/COURSERA_JS/event4.html
+++ b/COURSERA_JS/event4.html
@@ -4,7 +4,8 @@
         <link rel="stylesheet" href="event4.css">
         <title>more about events</title>
     </head>
-    <body>
+    <body id="body">
+        <p>Lets do some experiment</p>
         <button onclick="openMe()">OPEN</button>
         <button onclick="closeMe()">CLOSE</button>
         <p id="paragraph1">This the paragraph you actually wanted to open.</p>
