--- a/Restaurant App Modified/final_page.html
+++ b/Restaurant App Modified/final_page.html
@@ -14,6 +14,6 @@
             <a href="welcome_page.html">click here to go to HOMEPAGE</a>
         </h2>
         </p>
-        <script src="restaurant.js"></script>
+        <script src="restaurant1.js"></script>
     </body>
 </html>
