--- a/COURSERA_JS/event4.html
+++ b/COURSERA_JS/event4.html
@@ -8,7 +8,7 @@
         <p>Lets do some experiment</p>
         <button onclick="openMe()">OPEN</button>
         <button onclick="closeMe()">CLOSE</button>
-        <p id="paragraph1">This the paragraph you actually wanted to open.</p>
+        <p id="paragraph1"></p>
 
         <script src="events.js"></script>
     
