--- a/Restaurant App Modified/profile_page.html
+++ b/Restaurant App Modified/profile_page.html
@@ -41,6 +41,6 @@
         </h2>
         <h3> <a href="final_page.html"><button>Confirm</button></a></h3>
 
-        <script src="restaurant1.js"></script>
+        <script src="restaurant.js"></script>
     </body>
 </html>
