--- a/Restaurant App Modified/final_page.html
+++ b/Restaurant App Modified/final_page.html
@@ -11,7 +11,7 @@
         
         <p><br><Br><Br><br><br><br><Br><Br>
             <h2>
-            <a href="welcome_page.php">click here to go to HOMEPAGE</a>
+            <a href="index.php">click here to go to HOMEPAGE</a>
         </h2>
         </p>
         <script src="restaurant.js"></script>
